--- a/depression.html
+++ b/depression.html
@@ -19,7 +19,7 @@
 			<br>
 			<form action="results.html">
 				<label style="color:#f1f1f1;">Twitter Username
-					<input type="text" class="txtField"/>
+					<input type="text" class="txtField" name="twitterhandle"/>
 				</label>
 				<br><br><input type="submit" class="btn">
 			</form>
