resizing works now

--- a/depression.html
+++ b/depression.html
@@ -13,7 +13,7 @@
 	  <a href="javascript:void(0)">About Us</a>
 	</div>
 	<div class="containter">
-		<img src="media/header.jpg" style="width:100%;">
+		<img src="media/header.jpg">
 		<div class="centered">
 			<h1 style="color:white;">Are you depressed? Find out now!</h1>
 			<br>
@@ -25,17 +25,5 @@
 			</form>
 		</div>
 	</div>
-
-	<script>
-		window.onscroll=scrolled
-		var navbar = document.getElementById("navbar")
-		function myFunction() {
-		  if (window.pageYOffset >= navbar.offsetTop) {
-		    navbar.classList.add("sticky")
-		  } else {
-		    navbar.classList.remove("sticky")
-		  }
-		}
-	</script>
 </body>
 </html>
