added an about page

--- a/results.html
+++ b/results.html
@@ -2,6 +2,12 @@
 <html>
   <head>
     <title> oh yes</title>
+	<style>
+		body {
+			background-image: url("media/header.jpg");
+		}
+	</style>
+	</head>
   <body>
     <div id="IHAVEDEPRESSION" style="display:none"><h1>ur depressed &lt;3</h1></div>
     <div id="IHAVENODEPRESSION"><h1>ur depressed &lt;3</h1></div>
