--- a/depression.html
+++ b/depression.html
@@ -9,7 +9,7 @@
 
 <body>
 	<div id="navbar">
-	  <a href="javascript:void(0)">About Us</a>
+	  <a href="about.html">About Us</a>
 	</div>
 	<div class="containter">
 		<img src="media/header.jpg">
