Changed results pages

--- a/about.html
+++ b/about.html
@@ -30,12 +30,12 @@
 	<h1>About Us!</h1>
 	</div>
 	<div id="randomTxt">
-		<p>[INSERT TITLE HERE] was made using a combination of multiple different processes and languages. HTML and CSS were combined to create the web pages, while Python,
+		<p>This project was made using a combination of multiple different processes and languages. HTML and CSS were combined to create the web pages, while Python,
 		as well as many libraries, were used in the back end of this project. 
 		<br><br>The website takes the user's input and finds all tweets from the user with that name using an API called Tweepy.
-		Tweepy can return many more tweets than necessary, so instead, the first [x] tweets are taken and examined. 
+		Tweepy can return many more tweets than necessary, so instead, the most recent tweets are taken and examined. 
 		<br><br>Sentiment analysis is performed on them by a library published on 
 		GitHub called Empath. Empath returns the amount of positive and negative words and connotations in sentences, which is useful for determining whether a person is afflicted by 
-		clinical depression. The scale used to judge these tweets was developed through [insert process here, if it doesn't sound impressive enough, delete this sentence].</p>
+		clinical depression. /p>
 </body>
 </html>
