--- a/about.html
+++ b/about.html
@@ -31,11 +31,11 @@
 	</div>
 	<div id="randomTxt">
 		<p>This project was made using a combination of multiple different processes and languages. HTML and CSS were combined to create the web pages, while Python,
-		as well as many libraries, were used in the back end of this project. 
+		as well as many libraries, were used in the back end of this project.
 		<br><br>The website takes the user's input and finds all tweets from the user with that name using an API called Tweepy.
-		Tweepy can return many more tweets than necessary, so instead, the most recent tweets are taken and examined. 
-		<br><br>Sentiment analysis is performed on them by a library published on 
-		GitHub called Empath. Empath returns the amount of positive and negative words and connotations in sentences, which is useful for determining whether a person is afflicted by 
-		clinical depression. /p>
+		Tweepy can return many more tweets than necessary, so instead, the most recent tweets are taken and examined.
+		<br><br>Sentiment analysis is performed on them by a library published on
+		GitHub called Empath. Empath returns the amount of positive and negative words and connotations in sentences, which is useful for determining whether a person is afflicted by
+		clinical depression. </p>
 </body>
 </html>
